Delmar/force-app/main/default/objects/DEL_CaseCollaborationConfiguration__c/DEL_CaseCollaborationConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is used to configure various settings for Case Collaboration.</description>
    <label>Case Collaboration Configuration</label>
</CustomObject>