Delmar/force-app/main/default/objects/DEL_CaseCollaborationConfiguration__c/fields/CaseCommentEmailTemplateEnglish__c.field-meta.xml
<CustomField>
    <fullName>CaseCommentEmailTemplateEnglish__c</fullName>
    <description>Developer name of the English email template used to send email when a Case Comment is created.</description>
    <inlineHelpText>Enter the Developer Name of the Email Template to be used to send email when case comment is created.</inlineHelpText>
    <label>Case Comments Email Template - English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>