Delmar/force-app/main/default/objects/DEL_CaseCollaborationConfiguration__c/fields/CaseCommentsEmailTemplateFrench__c.field-meta.xml
<CustomField>
    <fullName>CaseCommentsEmailTemplateFrench__c</fullName>
    <description>Email template name to be used when language is French.</description>
    <inlineHelpText>Enter the name of the email template to be used for French language.</inlineHelpText>
    <label>Case Comments Email Template - French</label>
    <length>255</length>
    <type>Text</type>
</CustomField>