Delmar/force-app/main/default/objects/DEL_CaseCollaborationConfiguration__c/fields/CaseQueryFields__c.field-meta.xml
<CustomField>
    <fullName>CaseQueryFields__c</fullName>
    <description>Comma-separated list of values of all the Case fields that should be included in the SOQL query.</description>
    <inlineHelpText>Enter the API names of fields to be included in the Case query.</inlineHelpText>
    <label>Case Query Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>