Delmar/force-app/main/default/objects/DEL_CaseCollaborationConfiguration__c/fields/CollaboratorsFieldSet__c.field-meta.xml
<CustomField>
    <fullName>CollaboratorsFieldSet__c</fullName>
    <description>Name of the FieldSet which is used to get the fields to be displayed as columns in the Add Case Collaborators screen.</description>
    <label>Collaborators Field Set</label>
    <length>100</length>
    <type>Text</type>
</CustomField>