Delmar/force-app/main/default/objects/DEL_CaseCollaborationConfiguration__c/fields/DefaultImageURL__c.field-meta.xml
<CustomField>
    <fullName>DefaultImageURL__c</fullName>
    <description>This field stores the Document Url of the image to be used as a default image in community.</description>
    <inlineHelpText>Enter the Document Url of the image which should be used as a default image in community.</inlineHelpText>
    <label>Default Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>