Delmar/force-app/main/default/objects/DEL_CaseCollaborationConfiguration__c/fields/EnableNewEmailThreadingBehavior__c.field-meta.xml
<CustomField>
    <fullName>EnableNewEmailThreadingBehavior__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to identify if the new Salesforce email threading behavior has been enabled or not.</description>
    <inlineHelpText>Check this box if the new Salesforce email threading behavior has been enabled.</inlineHelpText>
    <label>Enable New Email Threading Behavior?</label>
    <type>Checkbox</type>
</CustomField>