Delmar/force-app/main/default/objects/DEL_CaseCollaborationConfiguration__c/fields/FileDownloadURL__c.field-meta.xml
<CustomField>
    <fullName>FileDownloadURL__c</fullName>
    <description>It stores the URL for downloading of the file.</description>
    <label>File Download URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>