Delmar/force-app/main/default/objects/DEL_CaseCollaborationConfiguration__c/fields/FilePreviewURL__c.field-meta.xml
<CustomField>
    <fullName>FilePreviewURL__c</fullName>
    <description>It stores the url for previewing of the file.</description>
    <label>File Preview URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>