Delmar/force-app/main/default/objects/DEL_CaseCollaborationConfiguration__c/fields/SiteName__c.field-meta.xml
<CustomField>
    <fullName>SiteName__c</fullName>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>